ButtonRow alignment fix.

--- a/packages/components/src/Button/ButtonRow/style.scss
+++ b/packages/components/src/Button/ButtonRow/style.scss
@@ -4,7 +4,8 @@
 	display: flex;
 	justify-content: center;
 	padding: var(--ee-padding-nano);
-	margin: var(--ee-margin-big) auto;
+	margin-top: var(--ee-margin-big);
+	margin-bottom: var(--ee-margin-big);
 	max-width: 900px;
 
 	.ee-debug-info-btn {
@@ -12,21 +13,27 @@
 		margin-right: unset;
 	}
 
-	&--left-aligned {
-		justify-content: flex-start;
-
-		.ee-debug-info-btn {
-			margin-right: unset;
+	&--align {
+		&-center {
+			margin-left: auto;
 			margin-right: auto;
 		}
-	}
+		&-left {
+			justify-content: flex-start;
 
-	&--right-aligned {
-		justify-content: flex-end;
+			.ee-debug-info-btn {
+				margin-right: unset;
+				margin-right: auto;
+			}
+		}
 
-		.ee-debug-info-btn {
-			margin-left: unset;
-			margin-right: auto;
+		&-right {
+			justify-content: flex-end;
+
+			.ee-debug-info-btn {
+				margin-left: unset;
+				margin-right: auto;
+			}
 		}
 	}
 
